2011-05-03 (0.2-9)
* Coded Western Sahara entirely as part of Morocco
  as of August 5, 1979 (Thanks to Nils-Christian Bormann)

2011-03-21 (0.2-8)
* Fixed incorrect location of Mali's capital.
  (Thanks to Sebastian Schutte)

2010-11-04 (0.2-7)
* Fixed GDR coding error (Buesingen exclave). (Thanks to
  Dan Reiter). Small changes to Java code.

2010-10-10 (0.2-6)
* Fixed wrong start date for East Timor. Deleted duplicate
  polygon for Yugoslavia. (Thanks to Andreas Tollufsen)

2010-09-15 (0.2-5)
* Fixed several unintended polygon overlaps in the
  Gleditsch & Ward coding of cshapes (for Yugoslavia 
  and its successor states). Note: in order to preserve
  the order of polygons (which were coded according to the 
  COW system) we set the G&W start date for Macedonia to the 
  COW date of April 8, 1993. (Thanks to Andreas Tollufsen)

2010-06-09 (0.2-4)
* Fixed incorrect longitude of Tonga's capital.
  (Thanks to Evan McCulla)

2010-02-24 (0.2-3)
* Fixed missing argument in cshp() function.
* Removed special characters from country names.

2010-01-26 (0.2-2)
* Recompiled for Java version 1.5.

2010-01-18 (0.2-1)
* Fixed wrong ISO codes of Bahrain.
* Added 'date' parameter to cshp() function. 

2010-01-05 (0.1-4)
* Excluded computation of example.

2009-12-26 (0.1-3)
* Fixed minor issue to pass R CMD check.

2009-11-15 (0.1-2)
* Added GIS metadata in file inst/shp/cshapes.shp.xml.
* Updated package documentation.

2009-08-13 (0.1-1)
* First public release.