@@ -1,6 +1,6 @@
 Package: cshapes
-Version: 0.2-9
-Date: 2011-05-03
+Version: 0.3-1
+Date: 2011-06-26
 Title: CShapes Dataset and Utilities
 Author: Nils B. Weidmann <nils.weidmann@gmail.com>, Doreen Kuse
         <doreen.kuse@gmail.com>, Kristian Skrede Gleditsch
@@ -12,8 +12,8 @@ SystemRequirements: Java (>= 1.5.0)
 LazyLoad: yes
 Description: Package for CShapes, a GIS dataset of country boundaries
         (1946-2008). Includes functions for data extraction and the
-        computation of weights matrices.
+        computation of distances matrices and -lists.
 License: GPL (>= 2)
-Packaged: 2011-05-03 19:54:29 UTC; nilsw
+Packaged: 2011-06-26 14:37:38 UTC; nilsw
 Repository: CRAN
-Date/Publication: 2011-05-04 07:14:03
+Date/Publication: 2011-06-27 07:00:26
