@@ -8,7 +8,7 @@ R Package for CShapes, a GIS dataset of country boundaries (1946-2008). Includes
 \details{
 The \code{cshapes} package facilitates the use of CShapes from R. CShapes is a GIS dataset of historical country boundaries (1946-2008) and compatible with two country lists (Gleditsch and Ward 1999 and Correlates of War, see references below). In particular, the package enables access to the 
 dataset directly, as well as distance computations on country polygons for specific points in time. Access to the dataset from within R is done using the 
-\code{\link{cshp}} function. The \code{\link{distmatrix}} function can be used to compute minimum-, capital- and centroid distances between countries. 
+\code{\link{cshp}} function. Two functions exist to compute minimum-, capital- and centroid distances between countries: the \code{\link{distmatrix}} function returns these as a matrix (convenient for many spatial statistical applications), and the \code{\link{distlist}} function returns a list of dyadic distances (distances between country pairs).
 See the examples given in the documentation of the functions in this package. The main cshapes website is located at \url{http://nils.weidmann.ws/projects/cshapes} and contains additional documentation and examples for the dataset and the R package.
 
 Implementation: The distance matrix computation is implemented in Java using the JAMA, JTS and JUMP libraries, using the rJava package to invoke the computation from R. Warning: If the Java process
