@@ -1,3 +1,10 @@
+2011-06-26 (0.3-1)
+* Added a distlist function that returns distances
+  in a dyadic format rather than a matrix.
+* Dropped United Arab Republic, which is not coded in 
+  G&W. The corresponding polygons have GWCODE=-1 and 
+  are dropped in all computations based on G&W.
+
 2011-05-03 (0.2-9)
 * Coded Western Sahara entirely as part of Morocco
   as of August 5, 1979 (Thanks to Nils-Christian Bormann)
